right aligned nav bar links, still with formatting issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,12 +7,14 @@
 }
 
 body {
-  background-color: white;
-  padding: 0.5rem;
+  background-color: #f5f7f8;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   color: #45474b;
   font-weight: medium;
+  width: 480px;
+  /* z-index: 0; */
 }
 
 @layer components {
@@ -21,12 +23,10 @@ body {
     background-color: #f5f7f8;
     max-width: 480px;
   }
-  header {
-    background-color: #f5f7f8;
-    padding-bottom: 1em;
-    padding-left: 1em;
-    padding-top: 0.5em;
+  .navBar {
     max-width: 480px;
+    align-self: flex-end;
+    color: #45474b;
   }
 
   footer {
@@ -54,8 +54,8 @@ body {
 .card {
   display: flex;
   justify-content: space-between;
-  margin-left: 4em;
-  margin-right: 4em;
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .icon {
@@ -91,6 +91,7 @@ body {
 
 .storeCard {
   padding: 0.5em;
+  z-index: 0;
 }
 
 .nameAndDelete {
@@ -102,6 +103,7 @@ body {
   min-width: fit-content;
   padding: 1em;
   transition: all 0.5s ease;
+  z-index: 0;
 }
 
 .itemName {
@@ -123,6 +125,7 @@ body {
   width: 25px;
   margin-top: 2px;
   transition: all 0.5s ease;
+  z-index: 0;
 }
 
 .deleteButton:hover {
